--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,11 @@
+defaults: &defaults
+  working_directory: ~/repo
+  docker: 
+    - image: circleci/node:10.2
+
 version: 2.0
 jobs:
+  <<: *defaults
   install:
     docker:
       - image: circleci/node:10.2
@@ -16,18 +22,13 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - persist_to_workspace:
+          paths: node_modules
   test:
-    docker:
-      - image: circleci/node:10.2
-    working_directory: ~/repo
+    <<: *defaults
     steps:
-      - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: npm install
+      - attach_workspace:
+          at: .
       - run:
           name: Tests with coverage
           command: npm run test-ci
@@ -39,18 +40,10 @@ jobs:
           command: ./node_modules/.bin/codecov
 
   lint:
-    docker:
-      - image: circleci/node:10.2
-
-    working_directory: ~/repo
+    <<: *defaults
     steps:
-      - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-      - run: npm install
+      - attach_workspace:
+          at: .
       - run:
           name: Lint
           command: npm run lint-ci
